--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
         <nav>
             <ul class="ul__list">
                 <div class="li__ctn">
-                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="index.html">About Me</a></li>
                 </div>
 
                 <div class="li__ctn">
